# openproject

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  chat.py  conversations.py  documents.py  facts.py  health.py  pagination.py  project_resolutions.py  projects.py  settings.py  stats.py
backend/app/chat/: memory.py  pipeline.py  prompts.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  models.py  session.py
backend/app/extraction/: pipeline.py  prompts.py  resolution.py  schemas.py
backend/app/ingestion/: parsers.py  pipeline.py  storage.py
backend/app/model_settings/: service.py
backend/app/orchestration/: checkpointer.py  poc.py  providers.py  state.py
backend/app/providers/: base.py  factory.py  logging.py  ollama.py  usage.py
backend/app/retrieval/: search.py
backend/migrations/: env.py
backend/migrations/versions/: 07c2a4dddca7_project_resolutions_and_nullable_.py  0f622767793c_initial_schema.py  (+10 more)
backend/tests/: conftest.py  test_admin.py  test_chat.py  test_chat_api.py  test_chat_memory.py  test_chat_titles.py  test_conversations_api.py  test_documents_api.py  test_extraction_pipeline.py  test_extraction_resolution.py  test_extraction_schemas.py  test_facts_api.py  test_logging.py  test_model_settings.py  test_orchestration_poc.py  test_parsers.py  test_pipeline.py  test_project_resolutions_api.py  test_projects_api.py  test_providers.py  test_retrieval.py  test_settings_api.py  test_stats_api.py  test_storage.py  test_usage.py
(+34 files in other folders)
