[project]
name = "openproject-backend"
version = "0.1.0"
description = "OpenProject backend: FastAPI service for ingestion, memory, and chat"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "pgvector",
    "alembic",
    "pydantic-settings",
    "pypdf",
    "ollama",
    "langgraph",
    "langgraph-checkpoint-postgres",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
